# blockchain

./: .gitignore  CLAUDE.md  Cargo.toml  GUIA.txt  init.sh
.claude/commands/: deploy-contract.md  mine.md  new-adr.md  start.md  status.md  stop.md  test-api.md
crates/blockchain-api/: Cargo.toml
crates/blockchain-api/src/: errors.rs  handlers.rs  models.rs  routes.rs  state.rs
crates/blockchain-core/: Cargo.toml
crates/blockchain-core/src/: block.rs  chain.rs  errors.rs  lib.rs  merkle.rs  state.rs  transaction.rs  wallet.rs
crates/blockchain-network/: Cargo.toml
crates/blockchain-network/src/: behaviour.rs  errors.rs  handler.rs  lib.rs  messages.rs  node.rs
crates/blockchain-node/: Cargo.toml
crates/blockchain-node/src/: config.rs  main.rs
crates/blockchain-vm/: Cargo.toml
crates/blockchain-vm/src/: compiler.rs  contract.rs  errors.rs  lib.rs  opcodes.rs  vm.rs
docs/adr/: 0000-template.md  0001-cargo-workspace-architecture.md  0002-proof-of-work-consensus.md  0003-ed25519-signatures.md  0004-stack-based-virtual-machine.md  0005-libp2p-networking.md  0006-dotenvy-configuration.md
