[package]
name = "blockchain-api"
version = "0.1.0"
edition = "2021"

[dependencies]
blockchain-core = { path = "../blockchain-core" }
blockchain-vm = { path = "../blockchain-vm" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
thiserror = "2"
tracing = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
