[package]
name = "blockchain-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
tracing = "0.1"
