[package]
name = "blockchain-network"
version = "0.1.0"
edition = "2021"

[dependencies]
blockchain-core = { path = "../blockchain-core" }
libp2p = { version = "0.54", features = ["gossipsub", "mdns", "noise", "tcp", "yamux", "tokio", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
tracing = "0.1"
