[package]
name = "blockchain-node"
version = "0.1.0"
edition = "2021"

[dependencies]
blockchain-core = { path = "../blockchain-core" }
blockchain-vm = { path = "../blockchain-vm" }
blockchain-network = { path = "../blockchain-network" }
blockchain-api = { path = "../blockchain-api" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
